--- a/index.html
+++ b/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="./style.css" />
+        <title>Art Hub</title>
+        <h1>Art hub</h1>
     </head>
     <body>
+        <section>
+        <div class="container">
+            <div class="holder"> 
+                <img class="img" src="img/img1.jpg" alt="a chameleon climbing a branch">
+            </div>
+            <div class="holder"> 
+                <img class="img" src="img/img2.jpg" alt="a chameleon climbing a branch">
+            </div>
+            <div class="holder"> 
+                <img class="img" src="img/img3.jpg" alt="a chameleon climbing a branch">
+            </div>
+        </div>
+        <div class="container">
+            <div class="holder"> 
+                <img class="img" src="img/img1.jpg" alt="a chameleon climbing a branch">
+            </div>
+            <div class="holder"> 
+                <img class="img" src="img/img2.jpg" alt="a chameleon climbing a branch">
+            </div>
+            <div class="holder"> 
+                <img class="img" src="img/img3.jpg" alt="a chameleon climbing a branch">
+            </div>
+        </div>
+        <div class="container">
+            <div class="holder"> 
+                <img class="img" src="img/img1.jpg" alt="a chameleon climbing a branch">
+            </div>
+            <div class="holder"> 
+                <img class="img" src="img/img2.jpg" alt="a chameleon climbing a branch">
+            </div>
+            <div class="holder"> 
+                <img class="img" src="img/img3.jpg" alt="a chameleon climbing a branch">
+            </div>
+        </div>
+        </section>
         
     </body>
+    <footer>
+
+    </footer>
 </html>
